--- a/Referencias.bib
+++ b/Referencias.bib
@@ -232,6 +232,15 @@ month={Oct},}
   publisher={Elsevier}
 }
 
+@inproceedings{abadi2007materialization,
+  title={Materialization strategies in a column-oriented DBMS},
+  author={Abadi, Daniel J and Myers, Daniel S and DeWitt, David J and Madden, Samuel R},
+  booktitle={Data Engineering, 2007. ICDE 2007. IEEE 23rd International Conference on},
+  pages={466--475},
+  year={2007},
+  organization={IEEE}
+}
+
 @inproceedings{stonebraker2005c,
   title={C-store: a column-oriented DBMS},
   author={Stonebraker, Mike and Abadi, Daniel J and Batkin, Adam and Chen, Xuedong and Cherniack, Mitch and Ferreira, Miguel and Lau, Edmond and Lin, Amerson and Madden, Sam and O'Neil, Elizabeth and others},
@@ -239,6 +248,15 @@ month={Oct},}
   pages={553--564},
   year={2005},
   organization={VLDB Endowment}
+}
+
+@inproceedings{boncz2005monetdb,
+  title={MonetDB/X100: Hyper-Pipelining Query Execution.},
+  author={Boncz, Peter A and Zukowski, Marcin and Nes, Niels},
+  booktitle={Cidr},
+  volume={5},
+  pages={225--237},
+  year={2005}
 }
 
 @book{inmon2005building,
@@ -428,4 +446,52 @@ month={Oct},}
 },
 	note = {Acessado em: 20 de maio de 2018}
 
+}
+
+@article{abadi2013design,
+  title={The design and implementation of modern column-oriented database systems},
+  author={Abadi, Daniel and Boncz, Peter and Harizopoulos, Stavros and Idreos, Stratos and Madden, Samuel and others},
+  journal={Foundations and Trends{\textregistered} in Databases},
+  volume={5},
+  number={3},
+  pages={197--280},
+  year={2013},
+  publisher={Now Publishers, Inc.}
+}
+
+@inproceedings{abadi2008column,
+  title={Column-stores vs. row-stores: how different are they really?},
+  author={Abadi, Daniel J and Madden, Samuel R and Hachem, Nabil},
+  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  pages={967--980},
+  year={2008},
+  organization={ACM}
+}
+
+@article{raasveldt2018fair,
+  title={Fair Benchmarking Considered Difficult: Common Pitfalls In Database Performance Testing},
+  author={Raasveldt, Mark and Holanda, Pedro and Gubner, Tim and M{\"u}hleisen, Hannes},
+  year={2018}
+}
+
+@article{westmann2000implementation,
+  title={The implementation and performance of compressed databases},
+  author={Westmann, Till and Kossmann, Donald and Helmer, Sven and Moerkotte, Guido},
+  journal={ACM Sigmod Record},
+  volume={29},
+  number={3},
+  pages={55--67},
+  year={2000},
+  publisher={ACM}
+}
+
+@article{roth1993database,
+  title={Database compression},
+  author={Roth, Mark A and Van Horn, Scott J},
+  journal={ACM Sigmod Record},
+  volume={22},
+  number={3},
+  pages={31--39},
+  year={1993},
+  publisher={ACM}
 }
