--- a/ModeloTCC.tex
+++ b/ModeloTCC.tex
@@ -26,7 +26,6 @@
 \usepackage{environ}
 \usepackage{verbatim}
 %\usepackage[num]{abntex2cite}
-\usepackage{verbatim}
 \usepackage{enumerate}
 \usepackage{booktabs}
 \usepackage{listings}
@@ -52,8 +51,8 @@
         showspaces=false,
         showstringspaces=false,
         identifierstyle=\ttfamily,
-				numbers=left,
-        numberstyle=\tiny,
+				% numbers=left,
+        % numberstyle=\tiny,
         keywordstyle=\color[rgb]{0,0,1},
         commentstyle=\color[rgb]{0.133,0.545,0.133},
         stringstyle=\color[rgb]{0.627,0.126,0.941},
@@ -181,7 +180,8 @@
 \include{3-SGBD/capitulo_sgbd}
 \include{4-NoSQL/capitulo_nosql}
 \include{5-TPCH/capitulo_tpch}
-\include{capitulo4/capitulo4}
+\include{6-Experimento/capitulo_experimento}
+\include{7-Conclusao/capitulo_conclusao}
 
 % Como numerar os apêndices como inteiros
 \appendix
@@ -190,6 +190,8 @@
 \oneandhalfspacing
 \include{apend/apendice2}
 \include{apend/apendice3}
+\include{apend/apendice4}
+\include{apend/apendice5}
 
 % incluindo o glossário
 %\include {glossario/glossario}
