--- a/apend/apendice2.tex
+++ b/apend/apendice2.tex
@@ -4,103 +4,103 @@
 \label{queries_1}
 
 
-São apresentadas aqui as 22 consultas realizadas no Ambiente \textit{Snow Flake}, cada qual com sua questão de negócio brevemente explicada.
+São apresentadas aqui as 15 consultas realizadas no Ambiente \textit{snowflake}, cada qual com sua questão de negócio brevemente explicada.
 
 \begin{enumerate}
 
 %--------------------------------------1
-\item Consulta de Relatório de Resumo de Preços \\
-	Emite um relatório com o resumo de preços de todos os itens enviados em uma certa data. Esta data corresponde a 60-120 dias antes da maior data de envio contida no banco de dados. 
+% \item Consulta de Relatório de Resumo de Preços \\
+% 	Emite um relatório com o resumo de preços de todos os itens enviados em uma certa data. Esta data corresponde a 60-120 dias antes da maior data de envio contida no banco de dados. 
     
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	DELTA & 90\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	DELTA & 90\\
+% \end{tabular}
     
-	\begin{lstlisting}[language=SQL]
-select
-	l_returnflag,
-	l_linestatus,
-	sum(l_quantity) as sum_qty,
-	sum(l_extendedprice) as sum_base_price,
-	sum(l_extendedprice * (1 - l_discount)) as sum_disc_price,
-	sum(l_extendedprice * (1 - l_discount) * (1 + l_tax)) as sum_charge,
-	avg(l_quantity) as avg_qty,
-	avg(l_extendedprice) as avg_price,
-	avg(l_discount) as avg_disc,
-	count(*) as count_order
-from
-	lineitem
-where
-	l_shipdate <= date '1998-12-01' - interval '[DELTA]' day (3)
-group by
-	l_returnflag,
-	l_linestatus
-order by
-	l_returnflag,
-	l_linestatus;
+% 	\begin{lstlisting}[language=SQL]
+% select
+% 	l_returnflag,
+% 	l_linestatus,
+% 	sum(l_quantity) as sum_qty,
+% 	sum(l_extendedprice) as sum_base_price,
+% 	sum(l_extendedprice * (1 - l_discount)) as sum_disc_price,
+% 	sum(l_extendedprice * (1 - l_discount) * (1 + l_tax)) as sum_charge,
+% 	avg(l_quantity) as avg_qty,
+% 	avg(l_extendedprice) as avg_price,
+% 	avg(l_discount) as avg_disc,
+% 	count(*) as count_order
+% from
+% 	lineitem
+% where
+% 	l_shipdate <= date '1998-12-01' - interval '[DELTA]' day (3)
+% group by
+% 	l_returnflag,
+% 	l_linestatus
+% order by
+% 	l_returnflag,
+% 	l_linestatus;
 	
-	\end{lstlisting}
+% 	\end{lstlisting}
 
-%--------------------------------------2
-\item Consulta de Fornecedor de Custo Mínimo
+% %--------------------------------------2
+% \item Consulta de Fornecedor de Custo Mínimo
 
-	Encontra o fornecedor que pode fornecer um produto com o menor custo em uma dada região.
+% 	Encontra o fornecedor que pode fornecer um produto com o menor custo em uma dada região.
 	
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	SIZE & 15\\
-	TYPE & BRASS\\
-	REGION & EUROPE\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	SIZE & 15\\
+% 	TYPE & BRASS\\
+% 	REGION & EUROPE\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-	s_acctbal,
-	s_name,
-	n_name,
-	p_partkey,
-	p_mfgr,
-	s_address,
-	s_phone,
-	s_comment
-from
-	part,
-	supplier,
-	partsupp,
-	nation,
-	region
-where
-	p_partkey = ps_partkey
-	and s_suppkey = ps_suppkey
-	and p_size = [SIZE]
-	and p_type like '%[TYPE]'
-	and s_nationkey = n_nationkey
-	and n_regionkey = r_regionkey
-	and r_name = '[REGION]'
-	and ps_supplycost = (
-		select
-			min(ps_supplycost)
-		from
-			partsupp,
-			supplier,
-			nation,
-			region
-		where
-			p_partkey = ps_partkey
-			and s_suppkey = ps_suppkey
-			and s_nationkey = n_nationkey
-			and n_regionkey = r_regionkey
-			and r_name = '[REGION]'
-	)
-order by
-	s_acctbal desc,
-	n_name,
-	s_name,
-	p_partkey;
-set rowcount 100
-go
-	\end{lstlisting}
+% 	\begin{lstlisting}[language=SQL]
+% select
+% 	s_acctbal,
+% 	s_name,
+% 	n_name,
+% 	p_partkey,
+% 	p_mfgr,
+% 	s_address,
+% 	s_phone,
+% 	s_comment
+% from
+% 	part,
+% 	supplier,
+% 	partsupp,
+% 	nation,
+% 	region
+% where
+% 	p_partkey = ps_partkey
+% 	and s_suppkey = ps_suppkey
+% 	and p_size = [SIZE]
+% 	and p_type like '%[TYPE]'
+% 	and s_nationkey = n_nationkey
+% 	and n_regionkey = r_regionkey
+% 	and r_name = '[REGION]'
+% 	and ps_supplycost = (
+% 		select
+% 			min(ps_supplycost)
+% 		from
+% 			partsupp,
+% 			supplier,
+% 			nation,
+% 			region
+% 		where
+% 			p_partkey = ps_partkey
+% 			and s_suppkey = ps_suppkey
+% 			and s_nationkey = n_nationkey
+% 			and n_regionkey = r_regionkey
+% 			and r_name = '[REGION]'
+% 	)
+% order by
+% 	s_acctbal desc,
+% 	n_name,
+% 	s_name,
+% 	p_partkey;
+% set rowcount 100
+% go
+% 	\end{lstlisting}
 
 %--------------------------------------3
 \item Consulta de Prioridade de Envio
@@ -141,39 +141,39 @@ go
 	\end{lstlisting}
 	
 %--------------------------------------4
-\item Consulta de Verificação de Prioridade de Pedido
+% \item Consulta de Verificação de Prioridade de Pedido
 		
-	Faz a contagem do número de pedidos solicitados em um dado trimestre de um determinado ano no qual pelo menos um item foi recebido pelo cliente após a data de entrega.
+% 	Faz a contagem do número de pedidos solicitados em um dado trimestre de um determinado ano no qual pelo menos um item foi recebido pelo cliente após a data de entrega.
 	
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	DATE & 1993-07-01\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	DATE & 1993-07-01\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-	o_orderpriority,
-	count(*) as order_count
-from
-	orders
-where
-	o_orderdate >= date '[DATE]'
-	and o_orderdate < date '[DATE]' + interval '3' month
-	and exists (
-		select
-			*
-		from
-			lineitem
-		where
-			l_orderkey = o_orderkey
-			and l_commitdate < l_receiptdate
-	)
-group by
-	o_orderpriority
-order by
-	o_orderpriority;
+% 	\begin{lstlisting}[language=SQL]
+% select
+% 	o_orderpriority,
+% 	count(*) as order_count
+% from
+% 	orders
+% where
+% 	o_orderdate >= date '[DATE]'
+% 	and o_orderdate < date '[DATE]' + interval '3' month
+% 	and exists (
+% 		select
+% 			*
+% 		from
+% 			lineitem
+% 		where
+% 			l_orderkey = o_orderkey
+% 			and l_commitdate < l_receiptdate
+% 	)
+% group by
+% 	o_orderpriority
+% order by
+% 	o_orderpriority;
 	
-	\end{lstlisting}
+% 	\end{lstlisting}
 
 %--------------------------------------5
 \item Consulta de Volume do Fornecedor Local
@@ -589,51 +589,51 @@ where
 	\end{lstlisting}
 
 %--------------------------------------15
-\item Consulta de Fornecedor Principal
+% \item Consulta de Fornecedor Principal
 
-Encontra o fornecedor que mais contribuiu com a receita total de peças enviadas durante um dado trimestre de um ano.
+% Encontra o fornecedor que mais contribuiu com a receita total de peças enviadas durante um dado trimestre de um ano.
 
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	DATE & 1996-01-01\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	DATE & 1996-01-01\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-create view revenue[STREAM_ID] (supplier_no, total_revenue) as
-	select
-		l_suppkey,
-		sum(l_extendedprice * (1 - l_discount))
-	from
-		lineitem
-	where
-		l_shipdate >= date '[DATE]'
-		and l_shipdate < date '[DATE]' + interval '3' month
-	group by
-		l_suppkey;
+% 	\begin{lstlisting}[language=SQL]
+% create view revenue[STREAM_ID] (supplier_no, total_revenue) as
+% 	select
+% 		l_suppkey,
+% 		sum(l_extendedprice * (1 - l_discount))
+% 	from
+% 		lineitem
+% 	where
+% 		l_shipdate >= date '[DATE]'
+% 		and l_shipdate < date '[DATE]' + interval '3' month
+% 	group by
+% 		l_suppkey;
 
-select
-	s_suppkey,
-	s_name,
-	s_address,
-	s_phone,
-	total_revenue
-from
-	supplier,
-	revenue[STREAM_ID]
-where
-	s_suppkey = supplier_no
-	and total_revenue = (
-		select
-			max(total_revenue)
-		from
-			revenue[STREAM_ID]
-	)
-order by
-	s_suppkey;
+% select
+% 	s_suppkey,
+% 	s_name,
+% 	s_address,
+% 	s_phone,
+% 	total_revenue
+% from
+% 	supplier,
+% 	revenue[STREAM_ID]
+% where
+% 	s_suppkey = supplier_no
+% 	and total_revenue = (
+% 		select
+% 			max(total_revenue)
+% 		from
+% 			revenue[STREAM_ID]
+% 	)
+% order by
+% 	s_suppkey;
 
-drop view revenue[STREAM_ID];
+% drop view revenue[STREAM_ID];
 
-	\end{lstlisting}
+% 	\end{lstlisting}
 
 %--------------------------------------16
 \item Consulta à Relação \textit{Part/Supplier}
@@ -689,37 +689,37 @@ order by
 	\end{lstlisting}
 
 %--------------------------------------17
-\item Consulta a Receita de Pedidos de Pequenas Quantidades
+% \item Consulta a Receita de Pedidos de Pequenas Quantidades
 
-Determina quanto de receita seria perdido se não fossem mais feitos pedidos para quantidades pequenas de certas peças.
+% Determina quanto de receita seria perdido se não fossem mais feitos pedidos para quantidades pequenas de certas peças.
 
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	BRAND & Brand$\#$23\\
-	TYPE & MEDIUM POLISHED \\
-	CONTAINER & MED BOX \\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	BRAND & Brand$\#$23\\
+% 	TYPE & MEDIUM POLISHED \\
+% 	CONTAINER & MED BOX \\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-	sum(l_extendedprice) / 7.0 as avg_yearly
-from
-	lineitem,
-	part
-where
-	p_partkey = l_partkey
-	and p_brand = '[BRAND]'
-	and p_container = '[CONTAINER]'
-	and l_quantity < (
-		select
-			0.2 * avg(l_quantity)
-		from
-			lineitem
-		where
-			l_partkey = p_partkey
-	);
+% 	\begin{lstlisting}[language=SQL]
+% select
+% 	sum(l_extendedprice) / 7.0 as avg_yearly
+% from
+% 	lineitem,
+% 	part
+% where
+% 	p_partkey = l_partkey
+% 	and p_brand = '[BRAND]'
+% 	and p_container = '[CONTAINER]'
+% 	and l_quantity < (
+% 		select
+% 			0.2 * avg(l_quantity)
+% 		from
+% 			lineitem
+% 		where
+% 			l_partkey = p_partkey
+% 	);
 	
-	\end{lstlisting}
+% 	\end{lstlisting}
 
 %--------------------------------------18
 \item Consulta a Grandes Volumes de Clientes
@@ -822,111 +822,111 @@ where
 	\end{lstlisting}
 
 %--------------------------------------20
-\item Consulta a Potenciais Promoções de Partes
+% \item Consulta a Potenciais Promoções de Partes
 
-Identifica os fornecedores de uma nação que possuem uma dada peça em excesso, que podem ser candidatas a uma oferta promocional.
+% Identifica os fornecedores de uma nação que possuem uma dada peça em excesso, que podem ser candidatas a uma oferta promocional.
 
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	COLOR & forest\\
-	DATE & 1994-01-01\\
-	NATION & CANADA\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	COLOR & forest\\
+% 	DATE & 1994-01-01\\
+% 	NATION & CANADA\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-	s_name,
-	s_address
-from
-	supplier,
-	nation
-where
-	s_suppkey in (
-	select
-		ps_suppkey
-	from
-		partsupp
-	where
-		ps_partkey in (
-			select
-				p_partkey
-			from
-				part
-			where
-				p_name like '[COLOR]%'
-		)
-		and ps_availqty > (
-			select
-				0.5 * sum(l_quantity)
-			from
-				lineitem
-			where
-				l_partkey = ps_partkey
-				and l_suppkey = ps_suppkey
-				and l_shipdate >= date '[DATE]'
-				and l_shipdate < date '[DATE]' + interval '1' year
-		)
-	)
-	and s_nationkey = n_nationkey
-	and n_name = '[NATION]'
-order by
-	s_name;
+% 	\begin{lstlisting}[language=SQL]
+% select
+% 	s_name,
+% 	s_address
+% from
+% 	supplier,
+% 	nation
+% where
+% 	s_suppkey in (
+% 	select
+% 		ps_suppkey
+% 	from
+% 		partsupp
+% 	where
+% 		ps_partkey in (
+% 			select
+% 				p_partkey
+% 			from
+% 				part
+% 			where
+% 				p_name like '[COLOR]%'
+% 		)
+% 		and ps_availqty > (
+% 			select
+% 				0.5 * sum(l_quantity)
+% 			from
+% 				lineitem
+% 			where
+% 				l_partkey = ps_partkey
+% 				and l_suppkey = ps_suppkey
+% 				and l_shipdate >= date '[DATE]'
+% 				and l_shipdate < date '[DATE]' + interval '1' year
+% 		)
+% 	)
+% 	and s_nationkey = n_nationkey
+% 	and n_name = '[NATION]'
+% order by
+% 	s_name;
 	
-	\end{lstlisting}
+% 	\end{lstlisting}
 
-%--------------------------------------21
-\item Consulta a Fornecedores que Mantiveram Pedidos em Espera
+% %--------------------------------------21
+% \item Consulta a Fornecedores que Mantiveram Pedidos em Espera
 
-Identifica fornecedores que não puderam enviar peças pedidas em um tempo hábil.
+% Identifica fornecedores que não puderam enviar peças pedidas em um tempo hábil.
 
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	NATION & SAUDI ARABIA\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	NATION & SAUDI ARABIA\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-	s_name,
-	count(*) as numwait
-from
-	supplier,
-	lineitem l1,
-	orders,
-	nation
-where
-	s_suppkey = l1.l_suppkey
-	and o_orderkey = l1.l_orderkey
-	and o_orderstatus = 'F'
-	and l1.l_receiptdate > l1.l_commitdate
-	and exists (
-		select
-			*
-		from
-			lineitem l2
-		where
-			l2.l_orderkey = l1.l_orderkey
-			and l2.l_suppkey <> l1.l_suppkey
-	)
-	and not exists (
-		select
-			*
-		from
-			lineitem l3
-		where
-			l3.l_orderkey = l1.l_orderkey
-			and l3.l_suppkey <> l1.l_suppkey
-			and l3.l_receiptdate > l3.l_commitdate
-	)
-	and s_nationkey = n_nationkey
-	and n_name = '[NATION]'
-group by
-	s_name
-order by
-	numwait desc,
-	s_name;
-set rowcount 100
-go
-	\end{lstlisting}
+% 	\begin{lstlisting}[language=SQL]
+% select
+% 	s_name,
+% 	count(*) as numwait
+% from
+% 	supplier,
+% 	lineitem l1,
+% 	orders,
+% 	nation
+% where
+% 	s_suppkey = l1.l_suppkey
+% 	and o_orderkey = l1.l_orderkey
+% 	and o_orderstatus = 'F'
+% 	and l1.l_receiptdate > l1.l_commitdate
+% 	and exists (
+% 		select
+% 			*
+% 		from
+% 			lineitem l2
+% 		where
+% 			l2.l_orderkey = l1.l_orderkey
+% 			and l2.l_suppkey <> l1.l_suppkey
+% 	)
+% 	and not exists (
+% 		select
+% 			*
+% 		from
+% 			lineitem l3
+% 		where
+% 			l3.l_orderkey = l1.l_orderkey
+% 			and l3.l_suppkey <> l1.l_suppkey
+% 			and l3.l_receiptdate > l3.l_commitdate
+% 	)
+% 	and s_nationkey = n_nationkey
+% 	and n_name = '[NATION]'
+% group by
+% 	s_name
+% order by
+% 	numwait desc,
+% 	s_name;
+% set rowcount 100
+% go
+% 	\end{lstlisting}
 
 %--------------------------------------22
 \item Consulta a Oportunidades de Vendas Globais
