--- a/apend/apendice3.tex
+++ b/apend/apendice3.tex
@@ -1,93 +1,93 @@
 %============================================================
 
-\chapter{Consultas do Ambiente Desnormalizado}
+\chapter{Consultas do Ambiente Denormalizado}
 \label{queries_2}
 
 
-São apresentadas aqui as 22 consultas realizadas no Ambiente Desnormalizado adaptado da proposta original do TPC-H. As questões de negócio são as mesmas que as apresentadas no Apêndice \ref{queries_1}.
+São apresentadas aqui as 15 consultas realizadas no Ambiente Denormalizado adaptado da proposta original do TPC-H. As questões de negócio são as mesmas que as apresentadas no Apêndice \ref{queries_1}.
 
 \begin{enumerate}
 
 %--------------------------------------1
-\item Consulta de Relatório de Resumo de Preços 
+% \item Consulta de Relatório de Resumo de Preços 
 
-	\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	DELTA & 90\\
-\end{tabular}
+% 	\begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	DELTA & 90\\
+% \end{tabular}
 	
-	\begin{lstlisting}[language=SQL]
-select
-    i_returnflag,
-    i_linestatus,
-    sum(i_quantity) as sum_qty,
-    sum(i_extendedprice) as sum_base_price,
-    sum(i_extendedprice * (1 - i_discount)) as sum_disc_price,
-    sum(i_extendedprice * (1 - i_discount) * (1 + i_tax)) as sum_charge,
-    avg(i_quantity) as avg_qty,
-    avg(i_extendedprice) as avg_price,
-    avg(i_discount) as avg_disc,
-    count(*) as count_order
-from
-    item
-where
-    i_shipdate <= date '1998-12-01' - interval '[DELTA]' day (3)
-group by
-    i_returnflag,
-    i_linestatus
-order by
-    i_returnflag,
-    i_linestatus;
-	\end{lstlisting}
+% 	\begin{lstlisting}[language=SQL]
+% select
+%     i_returnflag,
+%     i_linestatus,
+%     sum(i_quantity) as sum_qty,
+%     sum(i_extendedprice) as sum_base_price,
+%     sum(i_extendedprice * (1 - i_discount)) as sum_disc_price,
+%     sum(i_extendedprice * (1 - i_discount) * (1 + i_tax)) as sum_charge,
+%     avg(i_quantity) as avg_qty,
+%     avg(i_extendedprice) as avg_price,
+%     avg(i_discount) as avg_disc,
+%     count(*) as count_order
+% from
+%     item
+% where
+%     i_shipdate <= date '1998-12-01' - interval '[DELTA]' day (3)
+% group by
+%     i_returnflag,
+%     i_linestatus
+% order by
+%     i_returnflag,
+%     i_linestatus;
+% 	\end{lstlisting}
 
-%--------------------------------------2
-\item Consulta de Fornecedor de Custo Mínimo
+% %--------------------------------------2
+% \item Consulta de Fornecedor de Custo Mínimo
 	
-	\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	SIZE & 15\\
-	TYPE & BRASS\\
-	REGION & EUROPE\\
-\end{tabular}
+% 	\begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	SIZE & 15\\
+% 	TYPE & BRASS\\
+% 	REGION & EUROPE\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-    s_acctbal,
-    s_name,
-    s_nation_name,
-    p_partkey,
-    p_mfgr,
-    s_address,
-    s_phone,
-    s_comment
-from
-    part,
-    supplier
-where
-    p_partkey = i_partkey
-    and s_suppkey = i_suppkey
-    and p_size = [SIZE]
-    and p_type like '%[TYPE]'
-    and s_region_name = '[REGION]'
-    and i_partsupp_supplycost = (
-        select
-            min(i_partsupp_supplycost)
-        from
-            item,
-            supplier
-        where
-            p_partkey = i_partkey
-            and s_suppkey = i_suppkey
-            and s_region_name = '[REGION]'
-    )
-order by
-    s_acctbal desc,
-    s_nation_name,
-    s_name,
-    p_partkey;
-set rowcount 100
-go
-	\end{lstlisting}
+% 	\begin{lstlisting}[language=SQL]
+% select
+%     s_acctbal,
+%     s_name,
+%     s_nation_name,
+%     p_partkey,
+%     p_mfgr,
+%     s_address,
+%     s_phone,
+%     s_comment
+% from
+%     part,
+%     supplier
+% where
+%     p_partkey = i_partkey
+%     and s_suppkey = i_suppkey
+%     and p_size = [SIZE]
+%     and p_type like '%[TYPE]'
+%     and s_region_name = '[REGION]'
+%     and i_partsupp_supplycost = (
+%         select
+%             min(i_partsupp_supplycost)
+%         from
+%             item,
+%             supplier
+%         where
+%             p_partkey = i_partkey
+%             and s_suppkey = i_suppkey
+%             and s_region_name = '[REGION]'
+%     )
+% order by
+%     s_acctbal desc,
+%     s_nation_name,
+%     s_name,
+%     p_partkey;
+% set rowcount 100
+% go
+% 	\end{lstlisting}
 
 %--------------------------------------3
 \item Consulta de Prioridade de Envio
@@ -124,35 +124,35 @@ go
 	\end{lstlisting}
 	
 %--------------------------------------4
-\item Consulta de Verificação de Prioridade de Pedido
+% \item Consulta de Verificação de Prioridade de Pedido
 	
-	\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	DATE & 1993-07-01\\
-\end{tabular}
+% 	\begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	DATE & 1993-07-01\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-	i_order_orderpriority,
-	count(*) as order_count
-from
-	item
-where
-	i_order_orderdate >= date '[DATE]'
-	and i_order_orderdate < date '[DATE]' + interval '3' month
-	and exists (
-		select
-			*
-		from
-			item
-		where
-			i_commitdate < i_receiptdate
-	)
-group by
-	i_order_orderpriority
-order by
-	i_order_orderpriority;
-	\end{lstlisting}
+% 	\begin{lstlisting}[language=SQL]
+% select
+% 	i_order_orderpriority,
+% 	count(*) as order_count
+% from
+% 	item
+% where
+% 	i_order_orderdate >= date '[DATE]'
+% 	and i_order_orderdate < date '[DATE]' + interval '3' month
+% 	and exists (
+% 		select
+% 			*
+% 		from
+% 			item
+% 		where
+% 			i_commitdate < i_receiptdate
+% 	)
+% group by
+% 	i_order_orderpriority
+% order by
+% 	i_order_orderpriority;
+% 	\end{lstlisting}
 
 %--------------------------------------5
 \item Consulta de Volume do Fornecedor Local
@@ -502,48 +502,48 @@ where
 	\end{lstlisting}
 
 %--------------------------------------15
-\item Consulta de Fornecedor Principal
+% \item Consulta de Fornecedor Principal
 
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	DATE & 1996-01-01\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	DATE & 1996-01-01\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-create view revenue[STREAM_ID] (supplier_no, total_revenue) as
-	select
-		i_suppkey,
-		sum(i_extendedprice * (1 - i_discount))
-	from
-		item
-	where
-		i_shipdate >= date '[DATE]'
-		and i_shipdate < date '[DATE]' + interval '3' month
-	group by
-		i_suppkey;
+% 	\begin{lstlisting}[language=SQL]
+% create view revenue[STREAM_ID] (supplier_no, total_revenue) as
+% 	select
+% 		i_suppkey,
+% 		sum(i_extendedprice * (1 - i_discount))
+% 	from
+% 		item
+% 	where
+% 		i_shipdate >= date '[DATE]'
+% 		and i_shipdate < date '[DATE]' + interval '3' month
+% 	group by
+% 		i_suppkey;
 
-select
-	s_suppkey,
-	s_name,
-	s_address,
-	s_phone,
-	total_revenue
-from
-	supplier,
-	revenue[STREAM_ID]
-where
-	s_suppkey = supplier_no
-	and total_revenue = (
-		select
-			max(total_revenue)
-		from
-			revenue[STREAM_ID]
-	)
-order by
-	s_suppkey;
+% select
+% 	s_suppkey,
+% 	s_name,
+% 	s_address,
+% 	s_phone,
+% 	total_revenue
+% from
+% 	supplier,
+% 	revenue[STREAM_ID]
+% where
+% 	s_suppkey = supplier_no
+% 	and total_revenue = (
+% 		select
+% 			max(total_revenue)
+% 		from
+% 			revenue[STREAM_ID]
+% 	)
+% order by
+% 	s_suppkey;
 
-drop view revenue[STREAM_ID];
-	\end{lstlisting}
+% drop view revenue[STREAM_ID];
+% 	\end{lstlisting}
 
 %--------------------------------------16
 \item Consulta à Relação \textit{Part/Supplier}
@@ -597,34 +597,34 @@ go
 	\end{lstlisting}
 
 %--------------------------------------17
-\item Consulta a Receita de Pedidos de Pequenas Quantidades
+% \item Consulta a Receita de Pedidos de Pequenas Quantidades
 
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	BRAND & Brand$\#$23\\
-	TYPE & MEDIUM POLISHED \\
-	CONTAINER & MED BOX \\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	BRAND & Brand$\#$23\\
+% 	TYPE & MEDIUM POLISHED \\
+% 	CONTAINER & MED BOX \\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-    sum(i_extendedprice) / 7.0 as avg_yearly
-from
-    item,
-    part
-where
-    p_partkey = i_partkey
-    and p_brand = '[BRAND]'
-    and p_container = '[CONTAINER]'
-    and i_quantity < (
-        select
-            0.2 * avg(i_quantity)
-        from
-            item
-        where
-            i_partkey = p_partkey
-    );
-	\end{lstlisting}
+% 	\begin{lstlisting}[language=SQL]
+% select
+%     sum(i_extendedprice) / 7.0 as avg_yearly
+% from
+%     item,
+%     part
+% where
+%     p_partkey = i_partkey
+%     and p_brand = '[BRAND]'
+%     and p_container = '[CONTAINER]'
+%     and i_quantity < (
+%         select
+%             0.2 * avg(i_quantity)
+%         from
+%             item
+%         where
+%             i_partkey = p_partkey
+%     );
+% 	\end{lstlisting}
 
 %--------------------------------------18
 \item Consulta a Grandes Volumes de Clientes
@@ -721,99 +721,99 @@ where
 	\end{lstlisting}
 
 %--------------------------------------20
-\item Consulta a Potenciais Promoções de Partes
+% \item Consulta a Potenciais Promoções de Partes
 
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	COLOR & forest\\
-	DATE & 1994-01-01\\
-	NATION & CANADA\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	COLOR & forest\\
+% 	DATE & 1994-01-01\\
+% 	NATION & CANADA\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-    s_name,
-    s_address
-from
-    supplier
-where
-    s_suppkey in (
-        select
-            i_suppkey
-        from
-            item
-        where
-            i_partkey in (
-                select
-                    p_partkey
-                from
-                    part
-                where
-                    p_name like '[COLOR]%'
-            )
-            and i_partsupp_availqty > (
-                select
-                    0.5 * sum(i_quantity)
-                from
-                    item
-                where
-                    and i_shipdate >= date '[DATE]'
-                    and i_shipdate < date '[DATE]' + interval '1' year
-            )
-    )
-    and s_nation_name = '[NATION]'
-order by
-    s_name;
+% 	\begin{lstlisting}[language=SQL]
+% select
+%     s_name,
+%     s_address
+% from
+%     supplier
+% where
+%     s_suppkey in (
+%         select
+%             i_suppkey
+%         from
+%             item
+%         where
+%             i_partkey in (
+%                 select
+%                     p_partkey
+%                 from
+%                     part
+%                 where
+%                     p_name like '[COLOR]%'
+%             )
+%             and i_partsupp_availqty > (
+%                 select
+%                     0.5 * sum(i_quantity)
+%                 from
+%                     item
+%                 where
+%                     and i_shipdate >= date '[DATE]'
+%                     and i_shipdate < date '[DATE]' + interval '1' year
+%             )
+%     )
+%     and s_nation_name = '[NATION]'
+% order by
+%     s_name;
 
-\end{lstlisting}
+% \end{lstlisting}
 
-%--------------------------------------21
-\item Consulta a Forncedores que Mantiveram Pedidos em Espera
+% %--------------------------------------21
+% \item Consulta a Forncedores que Mantiveram Pedidos em Espera
 
-\begin{tabular}{ll}
-	Parâmetro de Substituição & Valor\\
-	NATION & SAUDI ARABIA\\
-\end{tabular}
+% \begin{tabular}{ll}
+% 	Parâmetro de Substituição & Valor\\
+% 	NATION & SAUDI ARABIA\\
+% \end{tabular}
 
-	\begin{lstlisting}[language=SQL]
-select
-    s_name,
-    count(*) as numwait
-from
-    supplier,
-    item i1
-where
-    s_suppkey = i1.i_suppkey
-    and i1.i_order_orderstatus = 'F'
-    and i1.i_receiptdate > i1.i_commitdate
-    and exists (
-        select
-            *
-        from
-            item i2
-        where
-            i2.i_itemkey = i2.i_itemkey
-            and i2.i_suppkey <> i1.i_suppkey
-    )
-    and not exists (
-        select
-            *
-        from
-            item i3
-        where
-            i3.i_itemkey = i1.i_itemkey
-            and i3.i_suppkey <> i1.i_suppkey
-            and i3.i_receiptdate > i3.i_commitdate
-    )
-    and s_nation_name = '[NATION]'
-group by
-    s_name
-order by
-    numwait desc,
-    s_name;
-set rowcount 100
-go
-	\end{lstlisting}
+% 	\begin{lstlisting}[language=SQL]
+% select
+%     s_name,
+%     count(*) as numwait
+% from
+%     supplier,
+%     item i1
+% where
+%     s_suppkey = i1.i_suppkey
+%     and i1.i_order_orderstatus = 'F'
+%     and i1.i_receiptdate > i1.i_commitdate
+%     and exists (
+%         select
+%             *
+%         from
+%             item i2
+%         where
+%             i2.i_itemkey = i2.i_itemkey
+%             and i2.i_suppkey <> i1.i_suppkey
+%     )
+%     and not exists (
+%         select
+%             *
+%         from
+%             item i3
+%         where
+%             i3.i_itemkey = i1.i_itemkey
+%             and i3.i_suppkey <> i1.i_suppkey
+%             and i3.i_receiptdate > i3.i_commitdate
+%     )
+%     and s_nation_name = '[NATION]'
+% group by
+%     s_name
+% order by
+%     numwait desc,
+%     s_name;
+% set rowcount 100
+% go
+% 	\end{lstlisting}
 
 %--------------------------------------22
 \item Consulta a Oportunidades de Vendas Globais
